[gd_scene load_steps=20 format=3 uid="uid://b5a85et3hbvkt"]

[ext_resource type="Texture2D" uid="uid://sirofax4xo2f" path="res://sprites/characters/players/coil.png" id="1_sk2s4"]
[ext_resource type="Script" path="res://scene/scripts/gameplay/player/player.gd" id="2_q17di"]
[ext_resource type="AudioStream" uid="uid://bcn1broll0kpg" path="res://sounds/player sounds/punch.mp3" id="3_hr6qm"]
[ext_resource type="AudioStream" uid="uid://84lb57igi6da" path="res://sounds/player sounds/uppercutCheer.ogg" id="3_uk4dx"]
[ext_resource type="AudioStream" uid="uid://dn3ce1xwfesx5" path="res://sounds/player sounds/dodge.mp3" id="4_pet71"]
[ext_resource type="AudioStream" uid="uid://b7ytevsk4wglf" path="res://sounds/player sounds/damaged.mp3" id="5_ytx5e"]
[ext_resource type="AudioStream" uid="uid://bdwexasawas40" path="res://sounds/player sounds/uppercut.mp3" id="6_qqgst"]
[ext_resource type="AudioStream" uid="uid://b4v43v0lq1pu5" path="res://sounds/player sounds/blockSfx.mp3" id="7_omev0"]

[sub_resource type="Animation" id="Animation_gjew8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(128, 136)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.944444)]
}

[sub_resource type="Animation" id="Animation_t4ss3"]
resource_name = "block"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 5, 6, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.25, 0.25),
"update": 0,
"values": [Vector2(1, 0.944444), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.25, 0.25),
"update": 0,
"values": [Vector2(128, 147.25), Vector2(128, 143.25)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7q1xm"]
resource_name = "damaged"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.267943, 0.267943),
"update": 0,
"values": [Vector2(128, 140), Vector2(128, 136)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Idle"
}]
}

[sub_resource type="Animation" id="Animation_t5s4f"]
resource_name = "dodgeL"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 5, 6, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(0.378929, 11.3137, 11.3137),
"update": 0,
"values": [Vector2(128, 136), Vector2(80, 136), Vector2(128, 136)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Idle"
}]
}

[sub_resource type="Animation" id="Animation_u1omg"]
resource_name = "dodgeR"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 7, 8, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(0.378929, 6.72717, 6.72717),
"update": 0,
"values": [Vector2(128, 136), Vector2(176, 136), Vector2(128, 136)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Idle"
}]
}

[sub_resource type="Animation" id="Animation_p6lit"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(128, 136)]
}

[sub_resource type="Animation" id="Animation_aykti"]
resource_name = "punchL"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(0.34151, 0.34151, 1),
"update": 0,
"values": [Vector2(128, 132), Vector2(128, 136), Vector2(128, 136)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Idle"
}]
}

[sub_resource type="Animation" id="Animation_pd02t"]
resource_name = "punchR"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(0.196146, 0.196146, 1),
"update": 0,
"values": [Vector2(128, 132), Vector2(128, 136), Vector2(128, 136)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Idle"
}]
}

[sub_resource type="Animation" id="Animation_a2ott"]
resource_name = "uppercut"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.45, 0.85),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 12, 13, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.55, 0.8, 0.85, 0.95),
"transitions": PackedFloat32Array(20.393, 1, 10.1965, 10.1965, 20.393, 1),
"update": 0,
"values": [Vector2(128, 136), Vector2(128, 88), Vector2(128, 83), Vector2(128, 87), Vector2(128, 140), Vector2(128, 136)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.85),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Idle"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yd8bo"]
_data = {
"RESET": SubResource("Animation_gjew8"),
"block": SubResource("Animation_t4ss3"),
"damaged": SubResource("Animation_7q1xm"),
"dodgeL": SubResource("Animation_t5s4f"),
"dodgeR": SubResource("Animation_u1omg"),
"idle": SubResource("Animation_p6lit"),
"punchL": SubResource("Animation_aykti"),
"punchR": SubResource("Animation_pd02t"),
"uppercut": SubResource("Animation_a2ott")
}

[sub_resource type="Gradient" id="Gradient_1fggr"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Player" type="Sprite2D"]
position = Vector2(128, 136)
scale = Vector2(1, 0.944444)
texture = ExtResource("1_sk2s4")
hframes = 14
frame = 5
script = ExtResource("2_q17di")

[node name="CheerSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_uk4dx")
volume_db = 1.612

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yd8bo")
}

[node name="PunchSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hr6qm")
bus = &"SoundFX"

[node name="DodgeSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_pet71")
volume_db = -0.808
bus = &"SoundFX"

[node name="HurtSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ytx5e")
bus = &"SoundFX"

[node name="UppercutSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_qqgst")
bus = &"SoundFX"

[node name="DodgeTimer" type="Timer" parent="."]

[node name="GhostTimer" type="Timer" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
lifetime = 3.1
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 83.48
direction = Vector2(0, -2)
gravity = Vector2(0, 6)
initial_velocity_min = 51.67
initial_velocity_max = 311.11
angular_velocity_min = 25.17
angular_velocity_max = 720.0
color_ramp = SubResource("Gradient_1fggr")

[node name="BlockSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_omev0")
volume_db = 1.745

[node name="Timer" type="Timer" parent="."]

[node name="CheerTimer" type="Timer" parent="."]

[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CheerTimer" to="." method="_on_cheer_timer_timeout"]
